--- a/package.json
+++ b/package.json
@@ -77,8 +77,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
+    "dev": "cross-env APP_ENV=development webpack serve --open",
     "build": "rm -rf dist && cross-env APP_ENV=production NODE_ENV=production webpack",
-    "dev": "cross-env APP_ENV=development webpack serve --content-base public",
     "sirv": "sirv dist --port 5000",
     "format": "prettier --write '{public,src}/**/*.{css,html,js,ts}'",
     "format:stylelint": "stylelint '**/*.{scss, css}'",
